<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/text_tasbih_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasbih_title"
        android:textAppearance="@style/TextAppearance.App.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tasbih_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/tasbih_subtitle"
        android:textAppearance="@style/TextAppearance.App.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tasbih_title" />

    <FrameLayout
        android:id="@+id/button_tasbih_tap"
        android:layout_width="@dimen/tasbih_circle_size"
        android:layout_height="@dimen/tasbih_circle_size"
        android:layout_marginTop="@dimen/spacing_xl"
        android:background="@drawable/bg_tasbih_circle"
        android:clickable="true"
        android:contentDescription="@string/tasbih_increment"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tasbih_subtitle">

        <TextView
            android:id="@+id/text_tasbih_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tasbih_count_default"
            android:textColor="@color/primary"
            android:textSize="@dimen/tasbih_count_text"
            android:textStyle="bold"
            tools:text="12" />
    </FrameLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_tasbih"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:max="33"
        android:progress="0"
        app:indicatorColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_tasbih_tap"
        app:trackColor="@color/surface_variant"
        app:trackCornerRadius="8dp" />

    <TextView
        android:id="@+id/text_tasbih_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:textAppearance="@style/TextAppearance.App.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_tasbih"
        tools:text="12 / 33" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tasbih_increment"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:text="@string/tasbih_increment"
        app:layout_constraintEnd_toStartOf="@id/button_tasbih_reset"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tasbih_progress"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tasbih_reset"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:text="@string/tasbih_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_tasbih_increment"
        app:layout_constraintTop_toTopOf="@id/button_tasbih_increment"
        app:layout_constraintWidth_percent="0.45"
        app:strokeColor="@color/primary" />

</androidx.constraintlayout.widget.ConstraintLayout>
